[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://gameplay/components/ExplorationItem/ExplorationItem.gd" type="Script" id=2]
[ext_resource path="res://gameplay/resources/audios/sfx_zip.wav" type="AudioStream" id=3]
[ext_resource path="res://gameplay/resources/audios/sfx_pop.wav" type="AudioStream" id=4]

[node name="ExplorationItem" type="MarginContainer" groups=["dropzone"]]
anchor_right = 0.117188
anchor_bottom = 0.2
margin_right = -20.0005
margin_bottom = -20.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Icon" type="TextureRect" parent="."]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="DropAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
